# SequoiaAuth

./: .gitignore  BuildDockerAuthServer.ps1  BuildDockerAuthServer.sh  DockerfileAuth  README.md  pyproject.toml
src/: AuthenticationServer.py
